--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
 *{
-    color:red;
+    background-color:#f1f1ef;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace ;
+}
+
+h1{
+    color: #34421E;
+}
+#burrito_link{
+    font-size: 35px;
+    text-decoration: none;
+    color: #c19434;
+    margin-top: 100px; /* Adjust the value as needed */
+    display: block; /* Make the link a block-level element to control its dimensions */
+}
+li{
+    text-align: left;
+    margin-left:300px;
+    margin-right: 300px;
+}
+#burrito-image{
+    width: 700px;
+    height: auto;
+}
+p{
+    margin-left: 200px;
+    margin-right:200px
 }
